--- a/package.json
+++ b/package.json
@@ -41,6 +41,7 @@
     "fs-extra": "3.0.1",
     "html-webpack-plugin": "2.29.0",
     "jest": "20.0.4",
+    "json-server": "^0.12.1",
     "object-assign": "4.1.1",
     "postcss-flexbugs-fixes": "3.2.0",
     "postcss-loader": "2.0.8",
@@ -67,7 +68,10 @@
     "selenium-stop": "pkill -f selenium-standalone",
     "integration-test": "wdio wdio.conf.js",
     "integration-test-watch": "wdio wdio.conf.js --watch",
-    "start": "node scripts/start.js",
+    "dev-server": "json-server --routes ./routes.json --watch ./currency.db.json --port 3001 --read-only --quiet",
+    "start:dev": "npm run dev-server & node scripts/start.js",
+    "start:live": "export REACT_APP_BASE_URL='http://coincap.io' && npm run start",
+    "start": "npm run start:live",
     "build": "node scripts/build.js",
     "test": "node scripts/test.js --env=jsdom"
   },
