--- a/.eslintrc.json
+++ b/.eslintrc.json
@@ -1,29 +1,35 @@
 {
-    "extends": [
-      "airbnb",
-      "plugin:react/recommended"
-    ],
-    "env": {
-      "browser": true,
-      "mocha": true,
-      "jest": true,
-      "worker": true
-    },
-    "globals": {
-      "it": true,
-      "describe": true,
-      "expect": true,
-      "before": true,
-      "browser": true
-    },
-    "plugins": [
-      "react"
-    ],
-    "rules": {
-      "react/jsx-filename-extension": [1, { "extensions": [".js", ".jsx"] }],
-      "import/no-extraneous-dependencies": "off",
-      "import/no-named-as-default": "off",
-      "import/prefer-default-export": "off",
-      "no-underscore-dangle": "off"
-    }
+  "extends": [
+    "airbnb",
+    "plugin:react/recommended"
+  ],
+  "env": {
+    "browser": true,
+    "mocha": true,
+    "jest": true,
+    "worker": true
+  },
+  "globals": {
+    "it": true,
+    "describe": true,
+    "expect": true,
+    "before": true,
+    "browser": true
+  },
+  "plugins": [
+    "react"
+  ],
+  "rules": {
+    "react/jsx-filename-extension": [1, { "extensions": [".js", ".jsx"] }],
+    "import/no-extraneous-dependencies": "off",
+    "import/no-named-as-default": "off",
+    "import/prefer-default-export": "off",
+    "no-underscore-dangle": "off",
+    "function-paren-newline": "off",
+    "jsx-a11y/anchor-is-valid": [ "error", {
+      "components": [ "Link" ],
+      "specialLink": [ "hrefLeft", "hrefRight", "to" ],
+      "aspects": [ "noHref", "invalidHref", "preferButton" ]
+    }]
+  }
 }
