--- a/package.json
+++ b/package.json
@@ -4,6 +4,10 @@
   "private": true,
   "license": "NPOSL-3.0",
   "dependencies": {
+    "@fortawesome/fontawesome": "^1.1.5",
+    "@fortawesome/fontawesome-free-brands": "^5.0.10",
+    "@fortawesome/fontawesome-free-solid": "^5.0.10",
+    "@fortawesome/react-fontawesome": "0.0.18",
     "bulma": "^0.7.0",
     "react": "^16.2.0",
     "react-dev-utils": "^5.0.0",
