--- a/.eslintrc.json
+++ b/.eslintrc.json
@@ -1,7 +1,7 @@
 {
   "extends": [
-    "airbnb",
-    "plugin:react/recommended"
+    "react-app",
+    "plugin:prettier/recommended"
   ],
   "env": {
     "browser": true,
