--- a/package.json
+++ b/package.json
@@ -34,11 +34,13 @@
     "enzyme-adapter-react-16": "^1.1.1",
     "eslint": "4.10.0",
     "eslint-config-airbnb": "^16.1.0",
+    "eslint-config-prettier": "^2.9.0",
     "eslint-config-react-app": "^2.1.0",
     "eslint-loader": "1.9.0",
     "eslint-plugin-flowtype": "2.39.1",
     "eslint-plugin-import": "^2.9.0",
     "eslint-plugin-jsx-a11y": "^6.0.3",
+    "eslint-plugin-prettier": "^2.6.0",
     "eslint-plugin-react": "^7.7.0",
     "extract-text-webpack-plugin": "3.0.2",
     "file-loader": "1.1.5",
@@ -49,6 +51,8 @@
     "object-assign": "4.1.1",
     "postcss-flexbugs-fixes": "3.2.0",
     "postcss-loader": "2.0.8",
+    "prettier": "^1.12.1",
+    "pretty-quick": "^1.4.1",
     "promise": "8.0.1",
     "raf": "3.4.0",
     "react-test-renderer": "^16.2.0",
@@ -72,39 +76,35 @@
     "selenium-stop": "pkill -f selenium-standalone",
     "integration-test": "wdio wdio.conf.js",
     "integration-test-watch": "wdio wdio.conf.js --watch",
-    "dev-server": "json-server --routes ./routes.json --watch ./currency.db.json --port 3001 --read-only --quiet",
+    "dev-server":
+      "json-server --routes ./routes.json --watch ./currency.db.json --port 3001 --read-only --quiet",
     "start:dev": "npm run dev-server & node scripts/start.js",
-    "start:live": "export REACT_APP_BASE_URL='http://coincap.io' && npm run start",
+    "start:live":
+      "export REACT_APP_BASE_URL='http://coincap.io' && npm run start",
     "start": "npm run start:live",
     "build": "node scripts/build.js",
-    "test": "node scripts/test.js --env=jsdom"
+    "test": "node scripts/test.js --env=jsdom",
+    "precommit": "pretty-quick --staged"
   },
   "jest": {
-    "collectCoverageFrom": [
-      "src/**/*.{js,jsx,mjs}"
-    ],
+    "collectCoverageFrom": ["src/**/*.{js,jsx,mjs}"],
     "coveragePathIgnorePatterns": [
       "src/index.js",
       "src/registerServiceWorker.js",
       "src/store"
     ],
-    "setupFiles": [
-      "<rootDir>/config/polyfills.js"
-    ],
-    "testMatch": [
-      "<rootDir>/specs/**/?(*.)(spec|test).{js,jsx,mjs}"
-    ],
+    "setupFiles": ["<rootDir>/config/polyfills.js"],
+    "testMatch": ["<rootDir>/specs/**/?(*.)(spec|test).{js,jsx,mjs}"],
     "setupTestFrameworkScriptFile": "<rootDir>/specs/setupTests.js",
     "testEnvironment": "node",
     "testURL": "http://localhost",
     "transform": {
       "^.+\\.(js|jsx|mjs)$": "<rootDir>/node_modules/babel-jest",
       "^.+\\.css$": "<rootDir>/config/jest/cssTransform.js",
-      "^(?!.*\\.(js|jsx|mjs|css|json)$)": "<rootDir>/config/jest/fileTransform.js"
+      "^(?!.*\\.(js|jsx|mjs|css|json)$)":
+        "<rootDir>/config/jest/fileTransform.js"
     },
-    "transformIgnorePatterns": [
-      "[/\\\\]node_modules[/\\\\].+\\.(js|jsx|mjs)$"
-    ],
+    "transformIgnorePatterns": ["[/\\\\]node_modules[/\\\\].+\\.(js|jsx|mjs)$"],
     "moduleNameMapper": {
       "^react-native$": "react-native-web"
     },
@@ -119,11 +119,6 @@
     ]
   },
   "babel": {
-    "presets": [
-      "react-app"
-    ]
-  },
-  "eslintConfig": {
-    "extends": "react-app"
+    "presets": ["react-app"]
   }
 }
