--- a/package.json
+++ b/package.json
@@ -85,6 +85,7 @@
     "start": "npm run start:live",
     "build": "node scripts/build.js",
     "test": "node scripts/test.js --env=jsdom",
+    "spec": "npm run test -- --verbose",
     "precommit": "pretty-quick --staged"
   },
   "jest": {
