--- a/package.json
+++ b/package.json
@@ -11,6 +11,7 @@
     "bulma": "^0.7.0",
     "d3": "^5.1.0",
     "react": "^16.2.0",
+    "react-autocomplete": "^1.8.1",
     "react-dev-utils": "^5.0.0",
     "react-dom": "^16.2.0",
     "react-redux": "^5.0.7",
