--- a/package.json
+++ b/package.json
@@ -86,7 +86,7 @@
     "start": "npm run start:live",
     "build": "node scripts/build.js",
     "test": "node scripts/test.js --env=jsdom",
-    "spec": "npm run test -- --verbose",
+    "spec": "npm run test -- --verbose --coverage",
     "precommit": "pretty-quick --staged"
   },
   "jest": {
